tests/tests/ui-unstable/no-arguments.stderr
error: proc macro panicked
  --> $DIR/no-arguments.rs:13:5
   |
13 |     indoc!();
   |     ^^^^^^^^^
   |
   = help: message: argument must be a single string literal, but got 0 arguments

